[gd_scene load_steps=8 format=3 uid="uid://b2obr3rol0qlr"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_c0db5"]
[ext_resource type="Texture2D" uid="uid://b2n6clgfa5b23" path="res://assestes/WhatsApp Image 2025-10-15 at 09.04.16.jpeg" id="2_byn38"]
[ext_resource type="Texture2D" uid="uid://btody62hajq66" path="res://assestes/WhatsApp Image 2025-10-20 at 10.32.26.jpeg" id="3_jwck3"]
[ext_resource type="Texture2D" uid="uid://cqhsva8v2ouwp" path="res://assestes/imagem play Preto.jpeg" id="4_y6oco"]
[ext_resource type="Texture2D" uid="uid://dkxrlfdqqxgqo" path="res://assestes/WhatsApp Image 2025-10-20 at 09.38.46.jpeg" id="5_8imsv"]
[ext_resource type="AudioStream" uid="uid://duj8jtbusb2ei" path="res://assestes/FUNDO MUSICAL _ SUSPENSE _ TERROR _ HORROR THEMES _ MÃšSICAS DE TERROR _ SOUNDTRACK 58 [P4hI5Mp93LA].mp3" id="6_vjtb6"]
[ext_resource type="Texture2D" uid="uid://bcasgcbeueml3" path="res://assestes/sangue red-Photoroom.png" id="7_xdgs7"]

[node name="menu" type="Node2D"]
script = ExtResource("1_c0db5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = -7.0
offset_right = 1157.0
offset_bottom = 644.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[node name="o retorno" type="Sprite2D" parent="."]
position = Vector2(346, 323)
scale = Vector2(0.671387, 0.420573)
texture = ExtResource("2_byn38")

[node name="play2" type="Button" parent="."]
offset_left = 775.0
offset_top = 4.0
offset_right = 1097.0
offset_bottom = 137.0
text = "play"

[node name="creditos2" type="Button" parent="."]
offset_left = 783.0
offset_top = 482.0
offset_right = 1096.0
offset_bottom = 630.0
text = "creditos"

[node name="sobre2" type="Button" parent="."]
offset_left = 779.0
offset_top = 251.0
offset_right = 1097.0
offset_bottom = 397.0
text = "sobre
"

[node name="sobre" type="Sprite2D" parent="."]
position = Vector2(935, 312)
scale = Vector2(0.416016, 0.345215)
texture = ExtResource("3_jwck3")

[node name="Play" type="Sprite2D" parent="."]
position = Vector2(942, 70)
scale = Vector2(0.42041, 0.306641)
texture = ExtResource("4_y6oco")

[node name="creditos" type="Sprite2D" parent="."]
position = Vector2(938, 562)
scale = Vector2(0.411621, 0.348145)
texture = ExtResource("5_8imsv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vjtb6")
volume_db = 24.0
pitch_scale = 4.0
autoplay = true

[node name="SangueRed-photoroom" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(968, 143)
scale = Vector2(0.501351, 0.389696)
texture = ExtResource("7_xdgs7")

[connection signal="pressed" from="play2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="creditos2" to="." method="_on_creditos_2_pressed"]
[connection signal="pressed" from="sobre2" to="." method="_on_sobre_2_pressed"]
