extends Node2D

func _on_button_pressed() -> void:
	pass # Replace with function body.
	get_tree().change_scene_to_file("res://cenas/cenario1.tscn")


func _on_creditos_2_pressed() -> void:
	pass # Replace with function body.
	get_tree() .change_scene_to_file("res://cenas/creditos.tscn")


func _on_sobre_2_pressed() -> void:
	pass # Replace with function body.
	get_tree() .change_scene_to_file("res://cenas/sobre.tscn")
